<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app1="http://schemas.android.com/apk/res/com.example.autofan"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android1:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.autofan.HomeActivity" >

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#125FDB"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app1:titleTextColor="#ffffff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/on"
        android1:onClick="turnOnFan"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentRight="true"
        android:text="@string/off"
        android1:onClick="turnOffFan"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/my_toolbar"
        android:layout_marginTop="70dp"
        android:text="@string/toggle"
        android1:onClick="toggleFan"
        tools:ignore="RtlHardcoded" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/my_toolbar"
        android:background="#226CE3"
        tools:ignore="RtlHardcoded" >

        <TextView
            android:id="@+id/current_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:text="@string/off"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/fanState"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android1:id="@+id/textView3"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentStart="true"
        android1:layout_below="@+id/button1"
        android1:layout_marginLeft="14dp"
        android1:layout_marginTop="15dp"
        android1:text="@string/speed"
        android1:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="RtlHardcoded" />

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/textView3"
        android1:layout_centerVertical="true"
        android1:orientation="horizontal" >

        <RadioButton
            android1:id="@+id/radio0"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:enabled="false"
            android1:text="@string/one" />

        <RadioButton
            android1:id="@+id/radio1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:enabled="false"
            android1:text="@string/two" />

        <RadioButton
            android1:id="@+id/radio2"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:enabled="false"
            android1:text="@string/three" />

        <RadioButton
            android1:id="@+id/radioButton1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:enabled="false"
            android1:text="@string/four"
            tools:ignore="HardcodedText" />

        <RadioButton
            android1:id="@+id/radioButton2"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:enabled="false"
            android1:text="@string/five" />

    </RadioGroup>

    <TextView
        android1:id="@+id/textView4"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/radioGroup1"
        android1:layout_below="@+id/radioGroup1"
        android1:layout_marginTop="36dp"
        android1:text="@string/shift"
        android1:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android1:id="@+id/button4"
        style="?android:attr/buttonStyleSmall"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/textView4"
        android1:layout_below="@+id/textView4"
        android1:layout_marginTop="28dp"
        android1:enabled="false"
        android1:text="@string/up" />

    <Button
        android1:id="@+id/button5"
        style="?android:attr/buttonStyleSmall"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBaseline="@+id/button4"
        android1:layout_alignBottom="@+id/button4"
        android1:layout_toRightOf="@+id/textView3"
        android1:enabled="false"
        android1:text="@string/down"
        tools:ignore="HardcodedText" />

</RelativeLayout>